tests/ui-stable/transmute-size-increase-allow-shrink.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-stable/transmute-size-increase-allow-shrink.rs:20:29
   |
20 | const INCREASE_SIZE: AU16 = transmute!(#![allow(shrink)] 0u8);
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `u8` (8 bits)
   = note: target type: `Transmute<u8, AU16>` (16 bits)
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui-stable/../../zerocopy-derive/tests/include.rs
  |
  |         let ptr = unsafe { ptr.cast_unsized_unchecked(|p| p.as_non_null().cast()) };
  |                                                           ^^^^^^^^^^^^^^^^^^^^^^ expected `PtrInner<'_, _>`, found `NonNull<_>`
  |
  = note: expected struct `PtrInner<'_, _>`
             found struct `NonNull<_>`
